--- a/register.html
+++ b/register.html
@@ -4,25 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Register</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1 class="h1">Login</h1>
+    <h1 class="h1">Register</h1>
     <form id="form">
         <input type="email" placeholder="enter your email" id="email"> <br>
-        <input type="password" placeholder="enter your password" id="password"><br>
-        <button type="submit">Login</button>
+        <input type="password" placeholder="enter your password" id="password"> <br>
+        <button type="submit">Register</button>
     </form>
-    <a class="a" href="./register.html">Not a user?</a>
+    <a class="a" href="./index.html">Already a user?</a>
 
 
 
 
 
 
-    <script type="module" src="app.js"></script>
+
+    <script type="module" src="register.js"></script>
 </body>
 
 </html>
