--- a/home.html
+++ b/home.html
@@ -8,8 +8,12 @@
 </head>
 
 <body>
-    <h1>Home</h1>
-
+    <h1>Task manager</h1>
+<form id="form">
+    <input type="text" id="title">
+    <input type="text" id="value">
+    <button type="submit">add</button>
+</form>
     <button id="logout">logOut</button>
 
     <script type="module" src="home.js"></script>
