--- a/home.html
+++ b/home.html
@@ -5,18 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
-<body>
-    <h1>Task manager</h1>
-<form id="form">
-    <input type="text" id="title">
-    <input type="text" id="value">
-    <button type="submit">add</button>
-</form>
-    <button id="logout">logOut</button>
+<body class="container">
+    <h1 class="d-flex justify-content-center">Task manager</h1>
+    <form id="form" class="d-flex justify-content-center">
+        <input class="m-2" type="text" id="title">
+        <input class="m-2" type="text" id="value">
+        <button type="submit">add</button>
+    </form>
+    <center><button id="logout" class="mt-5 mb-3 d-flex justify-content-center">logOut</button></center>
+
+    <div id="MainDiv">
+        
+    </div>
+
 
     <script type="module" src="home.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
