--- a/home.html
+++ b/home.html
@@ -17,8 +17,8 @@
 <body class="container">
     <h1 class="d-flex justify-content-center">Task manager</h1>
     <form id="form" class="d-flex justify-content-center">
-        <input class="m-2" type="text" id="title">
-        <input class="m-2" type="text" id="value">
+        <input class="m-2" required type="text" id="title">
+        <input class="m-2" required type="text" id="value">
         <button type="submit">add</button>
     </form>
     <center><button id="logout" class="mt-5 mb-3 d-flex justify-content-center">logOut</button></center>
