--- a/home.html
+++ b/home.html
@@ -7,24 +7,38 @@
     <title>home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <style>
-            .button{
-                width: 5rem;
-            }
-        </style>
+    <style>
+        .button {
+            width: 5rem;
+        }
+    </style>
 </head>
 
 <body class="container">
     <h1 class="d-flex justify-content-center">Task manager</h1>
     <form id="form" class="d-flex justify-content-center">
-        <input class="m-2" required placeholder="firstname" type="text" id="title">
-        <input class="m-2" required placeholder="lastname" type="text" id="value">
+        <input class="m-2" required placeholder="description" type="text" id="value">
+        <input class="m-2" required placeholder="title" type="text" id="title">
+        <select id="select">
+            <option value="karachi">karachi</option>
+            <option value="lahore">lahore</option>
+            <option value="hyderabad">hyderabad</option>
+            <option value="islamabad">islamabad</option>
+            <option value="peshawar">peshawar</option>
+        </select>
         <button type="submit">add</button>
     </form>
+
+    <button class="cities-btn">karachi</button>
+    <button class="cities-btn">lahore</button>
+    <button class="cities-btn">hyderabad</button>
+    <button class="cities-btn">islamabad</button>
+    <button class="cities-btn">peshawar</button>
+    <button class="reset">reset</button>
     <center><button id="logout" class="mt-5 mb-3 d-flex justify-content-center">logOut</button></center>
 
     <div id="MainDiv">
-        
+
     </div>
 
 
