--- a/home.html
+++ b/home.html
@@ -4,48 +4,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home</title>
+    <title>Task Manager</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <style>
-        .button {
-            width: 5rem;
-        }
-    </style>
+        <link rel="stylesheet" href="./home.css">
+   
 </head>
 
 <body class="container">
-    <h1 class="d-flex justify-content-center">Task manager</h1>
-    <form id="form" class="d-flex justify-content-center">
-        <input class="m-2" required placeholder="description" type="text" id="value">
-        <input class="m-2" required placeholder="title" type="text" id="title">
-        <select id="select">
-            <option value="karachi">karachi</option>
-            <option value="lahore">lahore</option>
-            <option value="hyderabad">hyderabad</option>
-            <option value="islamabad">islamabad</option>
-            <option value="peshawar">peshawar</option>
+
+    <h1 class="header text-center">Task Manager</h1>
+
+    <form id="form" class="task-form d-flex justify-content-between align-items-center">
+        <input class="form-control m-2" required placeholder="Title" type="text" id="title">
+        <input class="form-control m-2" required placeholder="Description" type="text" id="value">
+        <select class="form-select m-2" id="select">
+            <option value="karachi">Karachi</option>
+            <option value="lahore">Lahore</option>
+            <option value="hyderabad">Hyderabad</option>
+            <option value="islamabad">Islamabad</option>
+            <option value="peshawar">Peshawar</option>
         </select>
-        <button type="submit">add</button>
+        <button type="submit" class="btn">Add</button>
     </form>
 
-    <button class="cities-btn">karachi</button>
-    <button class="cities-btn">lahore</button>
-    <button class="cities-btn">hyderabad</button>
-    <button class="cities-btn">islamabad</button>
-    <button class="cities-btn">peshawar</button>
-    <button class="reset">reset</button>
-    <center><button id="logout" class="mt-5 mb-3 d-flex justify-content-center">logOut</button></center>
-
-    <div id="MainDiv">
-
+    <div class="text-center mt-3">
+        <button class="cities-btn">Karachi</button>
+        <button class="cities-btn">Lahore</button>
+        <button class="cities-btn">Hyderabad</button>
+        <button class="cities-btn">Islamabad</button>
+        <button class="cities-btn">Peshawar</button>
+        <button class="reset">Reset</button>
     </div>
 
+    <div id="MainDiv" class="row justify-content-center mt-5">
+        <!-- Cards will be inserted here -->
+    </div>
+
+    <center>
+        <button id="logout" class="mt-5 mb-3">Log Out</button>
+    </center>
+
+    <footer>
+        <p>&copy; 2024 Task Manager. All Rights Reserved.</p>
+    </footer>
 
     <script type="module" src="home.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
