--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     <title>Task Manager</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="./home.css">
+        <link rel="stylesheet" href="./style/home.css">
    
 </head>
 
@@ -17,7 +17,7 @@
 
     <form id="form" class="task-form d-flex justify-content-between align-items-center">
         <input class="form-control m-2" required placeholder="Title" type="text" id="title">
-        <input class="form-control m-2" required placeholder="Description" type="text" id="value">
+        <input class="form-control m-2" required placeholder="Description" type="text" id="Description">
         <select class="form-select m-2" id="select">
             <option value="karachi">Karachi</option>
             <option value="lahore">Lahore</option>
@@ -49,7 +49,7 @@
         <p>&copy; 2024 Task Manager. All Rights Reserved.</p>
     </footer>
 
-    <script type="module" src="home.js"></script>
+    <script type="module" src="./script/home.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
     </script>
