--- a/register.html
+++ b/register.html
@@ -19,7 +19,7 @@
     <!-- <button class="google_btn">
         <img src="https://img.icons8.com/color/16/000000/google-logo.png" alt="Google logo">register with Google
     </button> -->
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.all.min.js"></script>
     <script type="module" src="./script/register.js"></script>
 </body>
 
