--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <img src="./image/google-logo.png" alt="Google logo"> Login with Google
     </button>
     <button id="forgot-password">forgot password?</button>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.all.min.js"></script>
     <script type="module" src="./script/app.js"></script>
 </body>
 
